--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.4.5",
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "stylus": "^0.46.3"
   }
 }
